--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,6 @@ workflows:
   build_and_deploy:
     jobs:
       - deploy-website:
-#         filters: *filter-only-master
+         filters:
+          branches:
+            only: develop
